app/css/main.css
/* ... */
#collection .row > div,
#discover .row > div {
  border-color: var(--item-border);
}

#locals .row > div {
  border-color: var(--localitem-border);
}

#collection .row,
#trakt #history.row,
#trakt #discover .row,
#trakt #ratings.row {
  position: absolute;
  right: 10px;
  width: calc(100% - 55px);
}

#trakt #ratings .row {
  margin-right: 0;
  margin-left: 0;
}

#collection .shadow,
#discover .shadow {
  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.3) 100%);
  background-repeat: repeat-x;
  bottom: 0;
  height: 75px;
  left: 0;
  position: absolute;
  width: 100%;
}

#collection .titles h3 .year,
#discover .titles h3 .year {
  font-family: var(--font);
  font-size: 14px;
  font-weight: 400;
  padding-left: 6px;
  color: var(--item-year);
}

#collection .titles h3,
#discover .titles h3 {
  display: inline-block;
  font-size: 18px;
  margin-top: 3px;
  padding: 10px;
  text-shadow: var(--item-title-shadow);
  color: var(--item-title);
}

#collection .titles h3,
#discover .titles h3,
#collection .titles h4 .ep-title,
#discover .titles h4 .ep-title {
  background-color: var(--item-title-bg);
}

#collection .titles h4 .ep-title,
#discover .titles h4 .ep-title {
  color: var(--item-eptitle);
}

#collection .titles h4 .ep-title,
#discover .titles h4 .ep-title {
  padding: 3px 5px;
  padding-left: 6px;
}

#collection .titles h4 .sxe {
  background-color: #ed1c24;
  color: #fafafa;
  padding: 3px 5px;
}

#collection .titles h4 .unseen {
  background-color: rgba(255, 200, 0, 1);
  color: #1d1d1d;
  cursor: help;
  font-weight: 700;
  padding: 3px 5px;
  display: none;
}

#collection .titles h4,
#discover .titles h4 {
  display: inline-block;
  font-size: 11px;
  height: auto;
  margin: 0 5px 5px 0;
  white-space: nowrap;
  overflow-x: clip;
  text-overflow: ellipsis;
  max-width: 100%;
  position: absolute;
}

#collection .titles,
#discover .titles {
  bottom: 5px;
  height: auto;
  left: 12px;
  margin: 0;
  position: absolute;
  right: 12px;
}

#details {
  height: 100vh;
  overflow: hidden;
  position: fixed;
  width: 100vw;
  z-index: 3;
}

#details #details-back {
  cursor: pointer;
  font-size: 30px;
  padding: 38px 2%;
  position: absolute;
  transition: all .3s;
}

#details #details-back:hover,
#details-metadata .md-line span:before,
.rating-hearts:not(:checked) > label {
  color: #ddd;
}

#details #details-metadata {
  height: 350px;
  margin: 0 auto;
  padding: 25px 0;
  width: 85%;
}

#details #keepWatching,
#details #fileSelector,
#details #autoRate {
  display: none;
  height: 100%;
  position: absolute;
  width: 100%;
  z-index: 4;
}

#details #keepWatching .backgroundPopup,
#details #fileSelector .backgroundPopup,
#details #autoRate .backgroundPopup {
  background: black;
  height: 100%;
  opacity: .4;
  width: 100%;
}

#details #keepWatching .casting .ip {
  font-family: monospace;
  opacity: .6;
  text-align: center;
}

#details #keepWatching .casting .logo {
  font-size: 5em;
  margin-bottom: 20px;
  margin-top: 50px;
  text-align: center;
  width: 100%;
}

#details #keepWatching .casting,
#details-loading,
#details-spinner,
#details-sources .query,
#details-metadata .ids,
#details .data,
.switch input,
#settings .localsharing .resumeplayback,
#settings .mpv #mpvpath,
#hidden-input-local,
#locals .waitforlibrary .notfound,
#locals .local-item .seasons,
#locals .local-item .episode,
#locals,
#collection .grid-item .data,
#trakt .grid-item .data,
#collection #locals .data,
#init,
#traktwelcome,
#traktwelcome .spinner,
#requirempv,
#navbar,
#collection,
#shows,
#movies,
#locals .items.movies,
#locals .items.shows,
#locals .items.unmatched,
#settings,
#trailer,
#history,
#ratings,
#discover,
#stats,
#stats #sloaded,
#about,
#legal,
#testPlugins,
#testPlugins #tP-results,
#details,
#details #details-next,
#autolaunchminimized,
.ui-helper-hidden-accessible {
  display: none;
}

#init {
  position: fixed;
  width: 100vw;
  height: 100vh;
}

#details #keepWatching .selector .list {
  background-color: var(--app-color-alt);
  border-radius: 3px;
  height: 73%;
  margin: 0 20px;
  overflow: overlay;
  width: 90%;
}

#details #fileSelector .selector .list {
  background-color: var(--app-color-alt);
  border-radius: 3px;
  height: 51vh;
  margin: 0 5vw;
  overflow: overlay;
  width: 60vw;
}

#details #keepWatching .selector .list .peer,
#details #fileSelector .selector .list .item {
  background: rgba(200, 200, 200, .05);
  cursor: pointer;
  line-height: 35px;
  margin-bottom: 1px;
  opacity: .7;
  padding: 5px 10px;
  transition: all .5s;
}

#details #keepWatching .selector .list .peer .castingdisallowed {
  float: left;
  font-size: .8em;
}

#details #keepWatching .selector .list .peer .ip {
  float: right;
  font-family: monospace;
  opacity: .5;
}

#details #keepWatching .selector .list .peer .name {
  font-family: 'Proxima Nova Semibold';
  font-size: 1.4em;
  margin-left: 10px;
  margin-right: 10px;
}

#details #keepWatching .selector .title,
#details #keepWatching .casting .message {
  font-family: 'Proxima Nova Semibold';
  font-size: 1.8em;
  height: 20%;
  padding: 5px;
  text-align: center;
}

#details #fileSelector .selector .title,
#details #autoRate .title {
  font-family: 'Proxima Nova Semibold';
  font-size: 1.8em;
  height: 14vh;
  padding: 4vh;
  text-align: center;
}

#details #keepWatching .selector,
#details #keepWatching .casting {
  border-radius: 3px;
  box-shadow: 0 0 10px 0 #222;
  height: 250px;
  margin-left: calc(50vw - 200px);
  margin-top: calc(50vh - 125px);
  position: absolute;
  top: 0;
  width: 400px;
}

#details #fileSelector .selector,
#details #autoRate .ratedPopup {
  border-radius: 3px;
  box-shadow: 0 0 10px 0 #222;
  height: 70vh;
  margin-left: 15vw;
  margin-top: 15vh;
  position: absolute;
  top: 0;
  width: 70vw;
}
/* ... */

